<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialogCard"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="22dp"
        app:cardElevation="14dp"
        android:layout_margin="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialogTitle"
                android:text="@string/ejercicio_1_completado"
                android:textSize="22sp"
                android:fontFamily="@font/hachi_maru_pop_regular"
                android:textColor="@color/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/dialogMessage"
                android:text="@string/deseas_repetir_el_ejercicio_o_ir_al_ejercicio_2"
                android:textColor="#333"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="22dp"/>

            <Button
                android:id="@+id/btnRepeat"
                android:text="@string/repetir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/principallight"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnNext"
                android:text="@string/ir_al_ejercicio_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/principal"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>


