<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.LoginDatosFragment">

    <TextView
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:fontFamily="@font/poetsen_one_regular"
        android:text="@string/etDatos"
        android:textAlignment="center"
        android:textColor="@color/titles"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/principal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:fontFamily="@font/manrope_regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/principal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPassword"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:fontFamily="@font/manrope_regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Botón -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="351dp"
        android:layout_height="61dp"
        android:text="@string/btnNext"
        android:textSize="24sp"
        android:fontFamily="@font/manrope_bold"
        android:textColor="@color/textdark"
        app:cornerRadius="50dp"
        app:strokeColor="@color/principal"
        app:strokeWidth="5dp"
        app:backgroundTint="@color/white"
        app:rippleColor="@color/principalextralight"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>